--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,12 +34,16 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  flutter_map: ^6.1.0
   flutter_polyline_points: ^2.0.0
+  geolocator: ^10.1.0
+  geocoding: ^2.1.1
+  location: ^5.0.3
   http: ^1.1.2
-  latlong2: ^0.9.0
   flutter_bloc: ^8.1.3
   font_awesome_flutter: ^10.6.0
+  flutter_form_builder: ^9.1.1
+  google_maps_flutter: ^2.5.2
+  google_maps_flutter_web: ^0.5.4+3
 
 dev_dependencies:
   flutter_test:
