--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -28,8 +28,8 @@ android {
     ndkVersion flutter.ndkVersion
 
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+         sourceCompatibility 11
+    targetCompatibility 11
     }
 
     kotlinOptions {
@@ -67,4 +67,5 @@ flutter {
     source '../..'
 }
 
-dependencies {}
+dependencies {
+}
