--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,8 @@ dependencies:
   flutter_form_builder: ^9.1.1
   google_maps_flutter: ^2.5.2
   google_maps_flutter_web: ^0.5.4+3
+  flutter_typeahead: ^5.0.2
+  # search_map_location: ^0.0.6
   # reactive_forms: ^16.1.1
   # flutter_form_builder: ^9.1.1
 
